Atividade 12 atualizada